--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,17 @@
     <groupId>org.example</groupId>
     <artifactId>ffxiv-gatherbuddy-file-creator</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
                 <configuration>
                     <source>18</source>
                     <target>18</target>
+                    <encoding>UTF-8</encoding>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
