--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -59,6 +59,7 @@ jobs:
     #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
 
      - run: |
+       echo "Run, Build Application using script"
        .Core310/FFXIV-Wiki-Fetcher/src
 
     - name: Perform CodeQL Analysis
