--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -18,7 +18,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
   schedule:
-    - cron: '25 14 * * 4'
+    - cron: '20 13 * * 0'
 
 jobs:
   analyze:
@@ -52,6 +52,10 @@ jobs:
         # Details on CodeQL's query packs refer to : https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
         # queries: security-extended,security-and-quality
 
+        
+    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
+    # If this step fails, then you should remove it and run the build manually (see below)
+
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
 
@@ -60,7 +64,7 @@ jobs:
 
      - run: |
        echo "Run, Build Application using script"
-       ./location_of_script_within_repo/buildscript.sh
+       .Core310/FFXIV-Wiki-Fetcher/src/main/java
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
