--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -53,8 +53,8 @@ jobs:
         # queries: security-extended,security-and-quality
 
         
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
+    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
+    # If this step fails, then you should remove it and run the build manually (see below)
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
@@ -63,7 +63,7 @@ jobs:
     #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
 
      - run: |
-       echo "Run, Build Application using script"
-       .Core310/FFXIV-Wiki-Fetcher/src/main/java
+     make Core310/FFXIV-Wiki-Fetcher/.idea/compiler.xml
 
-
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
