--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -18,15 +18,9 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
   schedule:
-    - cron: '25 14 * * 4'
+    - cron: '35 10 * * 1'
 
 jobs:
-  init:
-  - name: Initialize CodeQL
-  uses: github/codeql-action/init@v2
-  with:
-    debug: true
-
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
@@ -61,8 +55,7 @@ jobs:
         
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
@@ -70,9 +63,9 @@ jobs:
     #   If the Autobuild fails above, remove it and uncomment the following three lines. 
     #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
 
-    # - run: |
-    #   echo "Run, Build Application using script"
-    #   ./location_of_script_within_repo/buildscript.sh
+    - run: |
+       echo "Run, Build Application using script"
+       .\Core310/FFXIV-Wiki-Fetcher/pom.xml
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
