--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -65,7 +65,6 @@ jobs:
 
     - run: |
        echo "Run, Build Application using script"
-       .\Core310/FFXIV-Wiki-Fetcher/pom.xml
-
+       pom.xml
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
