--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -22,10 +22,9 @@ on:
 
 jobs:
   actions:
-    - name: Setup Java JDK
-      uses: actions/setup-java@v1.3.0
-      with:
-        java-version: 18
+    - name: Setup Java Development Kits built by Oracle
+    uses: oracle-actions/setup-java@v1.1.2
+
 
   analyze:
     name: Analyze
