--- a/.github/workflows/jdkSetup.yml
+++ b/.github/workflows/jdkSetup.yml
@@ -1,7 +1,13 @@
-- name: Setup Java Development Kits built by Oracle
-steps:
-  - name: 'Set up latest Oracle JDK 17'
-    uses: oracle-actions/setup-java@v1
-    with:
-      website: oracle.com
-      release: 18
+name: Setup Java Development Kits built by Oracle
+on: [pull_request]
+
+permissions:
+  contents: read
+
+jobs:
+  steps:
+    - name: 'Set up latest Oracle JDK 17'
+      uses: oracle-actions/setup-java@v1
+      with:
+        website: oracle.com
+        release: 18
