--- a/.github/workflows/jdkSetup.yml
+++ b/.github/workflows/jdkSetup.yml
@@ -2,9 +2,10 @@ name: Setup Java Development Kits built by Oracle
 on: [pull_request]
 
 jobs:
-steps:
-  - name: 'Set up latest Oracle JDK 18'
-    uses: oracle-actions/setup-java@v1
-    with:
-      website: oracle.com
-      release: 18
+run:
+  steps:
+    - name: 'Set up latest Oracle JDK 18'
+      uses: oracle-actions/setup-java@v1
+      with:
+        website: oracle.com
+        release: 18
