--- a/.github/workflows/jdkSetup.yml
+++ b/.github/workflows/jdkSetup.yml
@@ -1,11 +1,29 @@
-name: Setup Java Development Kits built by Oracle
-on: [pull_request]
+# This is a basic workflow to help you get started with Actions
 
+name: JDK setup
+
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-run:
-  steps:
-    - name: 'Set up latest Oracle JDK 18'
-      uses: oracle-actions/setup-java@v1
-      with:
-        website: oracle.com
-        release: 18
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      - name: Setup Java Development Kits built by Oracle
+      uses: oracle-actions/setup-java@v1.1.2
