--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,22 +4,18 @@
 name: Java CI with Maven
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 18
-      uses: actions/setup-java@v3
+      - uses: actions/checkout@v3
+      - name: Setup JDK Latest
+        uses: oracle-actions/setup-java@v1.1.2
       with:
-        java-version: '18.0.2'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
