--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,6 +4,8 @@
 name: Java CI with Maven
 
 on:
+  commit:
+  branches["main"]
   pull_request:
     branches: [ "main" ]
 
@@ -21,3 +23,6 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    
+    - name: Run Unit Tests
+    run: src/test/java
