--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,7 +4,10 @@
 name: Java CI with Maven
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+  
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -16,6 +19,7 @@ jobs:
     - name: Set up JDK latest
       uses: actions/setup-java@v3
       with:
+      java-version: '18.0.2'
         distribution: 'temurin'
         cache: maven
 
