--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ name: Java CI with Maven
 
 on:
   workflow_dispatch:
-
+  pull_request: branches: [ "main" ]
 
 jobs:
   build:
@@ -17,7 +17,6 @@ jobs:
     - name: Set up JDK latest
       uses: actions/setup-java@v3
       with:
-      java-version: '18.0.2'
         distribution: 'temurin'
         cache: maven
 
