--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,4 +23,4 @@ jobs:
         run: mvn --batch-mode --update-snapshots package
 
       - name: Run Unit Tests
-        run: src/test/java
+        run: src/test/java/FindItemTest.java
