--- a/.github/workflows/Junit.yml
+++ b/.github/workflows/Junit.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v1
       - name: Build and Run Tests
-        run: src/test/java/FindItemTest.java # execute your tests generating test results
+        run: # execute your tests generating test results
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always() # always run even if the previous step fails
