--- a/.github/workflows/Junit.yml
+++ b/.github/workflows/Junit.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    name: Junit Tests
+    name: Build and Run Tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
