--- a/.github/workflows/Junit.yml
+++ b/.github/workflows/Junit.yml
@@ -1,10 +1,13 @@
 name: build
 on:
   pull_request:
+    ["main"]
+    
+  workflow_dispatch:
 
 jobs:
   build:
-    name: Build and Run Tests
+    name: Junit Tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
