--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -4,6 +4,7 @@ on:
     branches: [ "main" ]
 
   workflow_dispatch:
+  
 jobs:
   build:
     name: Build and Run Tests
@@ -12,9 +13,9 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v1
       - name: Build and Run Tests
-        run: src/test/java # execute your tests generating test results
+        run: src/test/java/FindItemTest.java # execute your tests generating test results
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always() # always run even if the previous step fails
         with:
-          report_paths: 'src/test/java'
+          report_paths: 'src/test/java/FindItemTest.java'
