--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -10,6 +10,12 @@ jobs:
     name: Build and Run Tests
     runs-on: ubuntu-latest
     steps:
+      - name: Set up JDK 18
+        uses: actions/setup-java@v1
+        with:
+          java-version: 18
+
+
       - name: Checkout Code
         uses: actions/checkout@v1
       - name: Build and Run Tests
