--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,11 @@
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <version>5.8.2</version>
-            <scope>test</scope>
+            <scope>Test</scope>
         </dependency>
+
 
     </dependencies>
 
