--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -17,13 +17,16 @@ jobs:
         with:
           java-version: 18
 
+
+      - name: Checkout Code
+        uses: actions/checkout@v1
       - name: Build and Run Tests
         run: mvn test # execute your tests generating test results
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always() # always run even if the previous step fails
         with:
-          report_paths: '**/build/test-results/test/TEST-*.xml'
+          report_paths: 'Test Results - FindItemTest.xml'
 
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
