--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -26,7 +26,7 @@ jobs:
         uses: mikepenz/action-junit-report@v3
         if: always() # always run even if the previous step fails
         with:
-          report_paths: build/tests/local_tests.xml
+          report_paths: build/tests/FindItemTest.xml
 
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
