--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -28,5 +28,13 @@ jobs:
         with:
           report_paths: build/test-results/test/TEST-*.xml    
 
+      - name: Test Report - JUnit table
+        uses: dorny/test-reporter@v1.5.0
+        if: success() || failure()    # run this step even if previous step failed
+        with:
+          name: JUnit Test results            # Name of the check run which will be created
+          path: build/test-results/test/TEST-*.xml    # Path to test results
+          reporter: java-junit        # Format of test results
+
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
