--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,16 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
+                <configuration>
+                    <properties>
+                        <configurationParameters>
+                            junit.platform.reporting.open.xml.enabled = true
+                            junit.platform.reporting.output.dir = ${project.build.directory}/surefire-reports
+                        </configurationParameters>
+                    </properties>
+                </configuration>
             </plugin>
 
         </plugins>
