--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -26,14 +26,14 @@ jobs:
         uses: mikepenz/action-junit-report@v3
         if: always() # always run even if the previous step fails
         with:
-          report_paths: '**/build/test-results/test/TEST-*.xml'    
+          report_paths: target/surefire-reports/*.xml
 
       - name: Test Report - JUnit table
         uses: dorny/test-reporter@v1.5.0
         if: success() || failure()    # run this step even if previous step failed
         with:
           name: JUnit Test results            # Name of the check run which will be created
-          path: '**/build/test-results/test/TEST-*.xml'    # Path to test results
+          path: target/surefire-reports/*.xml    # Path to test results
           reporter: java-junit        # Format of test results
 
       - name: Build with Maven
