--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>FFXIV-Wiki-Fetcher</groupId>
     <artifactId>ffxiv-gatherbuddy-file-creator</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.release>18</maven.compiler.release>
