--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,40 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>FFXIV-Wiki-Fetcher</groupId>
-    <artifactId>ffxiv-gatherbuddy-file-creator</artifactId>
-    <version>1.0.1</version>
+    <groupId>com.github.FFXIV-Wiki-Fetcher</groupId>
+    <artifactId>FFXIV-Wiki-Fetcher</artifactId>
+    <version>1.0.0</version>
+    <packaging>jar</packaging>
+
+
+    <name>FFXIV-Wiki-Fetcher</name>
+    <description>Searches for DOH/DOL gathering nodes (aka gathering classes) from the consolegameswiki and outputs them in a neat and readable format.
+    </description>
+    <url>https://github.com/Core310/FFXIV-Wiki-Fetcher</url>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Arika k</name>
+            <email>arika.khor@gmail.com</email>
+            <organization>me myself and I</organization>
+            <organizationUrl>https://github.com/Core310</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+            <connection>scm:git:git://github.com/Core310/FFXIV-Wiki-Fetcher.git</connection>
+        <developerConnection>scm:git:ssh://github.com:Core310/FFXIV-Wiki-Fetcher.git</developerConnection>
+        <url>https://github.com/Core310/FFXIV-Wiki-Fetcher/tree/master</url>
+    </scm>
+
+
 
     <properties>
         <maven.compiler.release>18</maven.compiler.release>
