--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     name: Build and Run Tests
     runs-on: ubuntu-latest
+    permissions: read-all
     steps:
       - name: Checkout Code
         uses: actions/checkout@v1
@@ -25,6 +26,7 @@ jobs:
 
       - name: Build and Run Tests
         run: mvn test # execute your tests generating test results
+        
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: always() # always run even if the previous step fails
