--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,11 @@
 
     <distributionManagement>
         <snapshotRepository>
-            <id>ff14wf</id>
+            <id>FFXIV-Wiki-Fetcher</id>
             <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
         <repository>
-            <id>ff14wf</id>
+            <id>FFXIV-Wiki-Fetcher</id>
             <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
