--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -17,8 +17,8 @@ jobs:
           java-version: '18'
           distribution: 'adopt'
           server-id: ossrh
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_PASSWORD
+          server-username: ${{ secrets.MAVEN_USERNAME}}
+          server-password: ${{ secrets.MAVEN_PASSWORD}}
       - name: Publish to the Maven Central Repository
         run: mvn --batch-mode deploy
         env:
