update pom version

--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>io.github.Core310</groupId>
     <artifactId>FFXIV-Wiki-Fetcher</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
 
     <name>FFXIV-Wiki-Fetcher</name>
-    <description>Searches for DOH/DOL gathering nodes (aka gathering classes) from the consolegameswiki and outputs them in a neat and readable format. Please see the GitHub README for usage.
+    <description>Searches for DOH/DOL gathering nodes (aka gathering classes) from the consolegameswiki and outputs them in a neat and readable format.
     </description>
     <url>https://github.com/Core310/FFXIV-Wiki-Fetcher</url>
 
@@ -42,20 +42,10 @@
             <id>FFXIV-Wiki-Fetcher</id>
             <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
-        <!--
         <repository>
             <id>FFXIV-Wiki-Fetcher</id>
             <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
-
-        -->
-
-        <repository>
-            <id>github</id>
-            <name>GitHub Core310 Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/Core310/FFXIV-Wiki-Fetcher/</url>
-        </repository>
-
     </distributionManagement>
 
 
@@ -66,15 +56,6 @@
     </properties>
 
     <build>
-        <resources>
-            <resource>
-                <directory>main/resources</directory>
-            </resource>
-            <resource>
-                <directory>main/java</directory>
-            </resource>
-        </resources>
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
