--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.Core310</groupId>
     <artifactId>FFXIV-Wiki-Fetcher</artifactId>
-    <version>1.0.1</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
 
@@ -59,16 +59,10 @@
 
         <resources>
             <resource>
-                <directory>src/main/java</directory>
+                <directory>src/main</directory>
                 <includes>
                     <include>**/*.java</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-                <includes>
                     <include>**/*.TSV</include>
-
                 </includes>
             </resource>
         </resources>
