--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.Core310</groupId>
     <artifactId>FFXIV-Wiki-Fetcher</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.1-0</version>
     <packaging>jar</packaging>
 
 
@@ -56,18 +56,6 @@
     </properties>
 
     <build>
-
-        <resources>
-            <resource>
-                <directory>src/main</directory>
-                <includes>
-                    <include>**/*.java</include>
-                    <include>**/*.TSV</include>
-                </includes>
-            </resource>
-        </resources>
-
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
