--- a/.github/workflows/JUnit Report Action.yml
+++ b/.github/workflows/JUnit Report Action.yml
@@ -11,7 +11,11 @@ jobs:
   build:
     name: Build and Run Tests
     runs-on: ubuntu-latest
-    permissions: read-all
+    permissions:
+    contents: read
+    checks: write
+    id-token: write
+    
     steps:
       - name: Checkout Code
         uses: actions/checkout@v1
